@@ -35,7 +35,7 @@
     "typo3-ter/fh-debug": "self.version"
   },
   "require": {
-    "php": ">=7.0.0,<=7.99",
+    "php": ">=7.0.0,<=7.4",
     "typo3/cms-core": ">=8.7,<9.6"
   },
   "autoload": {
